--- a/jupyter/skel/ukacm_autumn_school/mixed_poisson/mixed_poisson.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/mixed_poisson/mixed_poisson.ipynb
@@ -104,7 +104,7 @@
    "id": "601d262b",
    "metadata": {},
    "source": [
-    "### A priori error estimates for the mixed problem\n",
+    "### ***A priori*** error estimates for the mixed problem\n",
     "\n",
     "The stability of the mixed weak form \\eqref{eq:weak_1}-\\eqref{eq:weak_2} in the finite-element setting requires that the approximation order of the $\\mathbf{q}$ field is higher by one than the approximation order of the $u$ field. This is known as the *inf*-*sup* or LBB stability condition, see [[Boffi, 2013]](#boffi_2013) for more details. Therefore, if $p$ is the approximation order of the $u$ field, then approximation order for $\\mathbf{q}$ is $p+1$.\n",
     "\n",
@@ -128,7 +128,7 @@
    "id": "a37dc148",
    "metadata": {},
    "source": [
-    "## Error indicators and an algorithm for adaptive p-refinement\n",
+    "## ***A posteriori*** error indicators and an algorithm for adaptive p-refinement\n",
     "\n",
     "As was mentioned above, one of the main benefits of the mixed formulation is associated with embedded error estimates. It is important to distinguish between error <em>indicators</em> which compute local measure of the error and error <em>estimators</em> which provide mathematically strict bounds on the global error. In this tutorial we will consider only the former, and in particular, will study a simple error indicator which represents the norm of difference between the gradient of field $u$ and the flux $\\mathbf{q}$ computed over a finite element $\\Omega_e$, see [[Repin, 2008]](#repin_2008) for more details:\n",
     "\n",
@@ -138,8 +138,8 @@
     "\n",
     "In addition to the error indicators, we will also compute:\n",
     "\n",
-    "- L2 norm of the error $||u^h - u^*||_{\\Omega_e}^2$\n",
-    "- H1 seminorm of the error $||\\nabla u^h - \\nabla u^*||_{\\Omega_e}^2$\n",
+    "- $L^2$ norm of the error $||u^h - u^*||_{\\Omega_e}^2$\n",
+    "- $H^1$ seminorm of the error $||\\nabla u^h - \\nabla u^*||_{\\Omega_e}^2$\n",
     "\n",
     "These values are then stored as tags on the corresponding elements in the MOAB database, and, furthermore, are summed up with contributions from other elements to provide the global values.\n",
     "\n",
@@ -226,7 +226,9 @@
   {
    "cell_type": "markdown",
    "id": "aa0c4991",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Importing necessary modules, setting parameters and paths"
    ]
@@ -235,7 +237,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e375939f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -277,7 +281,9 @@
   {
    "cell_type": "markdown",
    "id": "e4ef7ebc",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Define utility functions (mesh generation, running the analysis, results post-processing)"
    ]
@@ -286,7 +292,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c3917ad1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class AttrDict(dict):\n",
@@ -491,7 +499,7 @@
     "params.log_file = \"log\" # log file name\n",
     "params.convert = True # set True to convert results for-postprocessing\n",
     "params.nproc = 4 # number of cores/processors to use\n",
-    "params.order = 2 # approximation order of the field u (field q in the mixed formulation will have order p+1)\n",
+    "params.order = 2 # approximation order p of the field u (field q in the mixed formulation will have order p+1)\n",
     "params.verbosity_level = \"inform\" # you can try \"verbose\" if needed\n",
     "\n",
     "# Apative p-refinement parameters\n",
@@ -519,6 +527,8 @@
    "outputs": [],
    "source": [
     "params.element_size = 0.05 # <- TRY CHANGING THIS\n",
+    "params.triangle_mesh = False # <- TRY CHANGING THIS\n",
+    "\n",
     "params.show_mesh = True\n",
     "generate_mesh(params)"
    ]
@@ -588,7 +598,7 @@
    "metadata": {},
    "source": [
     "### Global convergence study\n",
-    "#### Task 1: perform global order and mesh convergence analysis"
+    "#### Perform global order and mesh convergence analysis"
    ]
   },
   {
@@ -598,15 +608,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_list = [1, 2, 3, 4] \n",
-    "\n",
-    "elem_size_list = [0.05, 0.025, 0.01, 0.005]\n",
+    "order_list = [1, 2, 3, 4] # approximation order p\n",
+    "elem_size_list = [0.05, 0.025, 0.01, 0.005] # element size h\n",
     "\n",
     "params.indic_tol = 0\n",
     "params.show_mesh = False\n",
     "\n",
     "mixed_poisson_test = []\n",
     "standard_poisson_test = []\n",
+    "\n",
+    "params.triangle_mesh = False\n",
     "\n",
     "for order in order_list:\n",
     "    params.order = order\n",
@@ -630,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94af28aa",
+   "id": "516a3d19",
    "metadata": {},
    "source": [
     "#### Plot error L2 norm vs element size"
@@ -666,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "081d0830",
+   "id": "42302c61",
    "metadata": {},
    "source": [
     "#### Plot error H1 seminorm vs element size"
@@ -676,7 +687,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a73d75cc",
-   "metadata": {},
+   "metadata": {
+    "cell_style": "center"
+   },
    "outputs": [],
    "source": [
     "colors = cm.rainbow(np.linspace(0, 1, len(order_list)))\n",
@@ -775,11 +788,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f6c3746",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "params.show_mesh = False\n",
     "params.element_size = 0.05\n",
+    "params.triangle_mesh = False\n",
     "generate_mesh(params)\n",
     "\n",
     "params.executable = \"mixed_poisson\"\n",
@@ -888,7 +904,8 @@
     "params.convert = False\n",
     "generate_mesh(params)\n",
     "\n",
-    "params.theta = 0.5 # try different values of theta in range [0, 1] to reach the tolerance in minimal number of iterations\n",
+    "params.theta = 0.8 # try different values of theta in range [0, 1] \n",
+    "                   # to reach the tolerance in minimal number of iterations and/or number of DOFs\n",
     "\n",
     "adapt_res = run_mofem(params)"
    ]
@@ -908,20 +925,12 @@
     "plt.loglog(adapt_res.dof_num, adapt_res.err_h1_snorm, ls='-', marker='o', ms=4, c='k', label=\"mixed, adapt p-ref\")\n",
     "    \n",
     "plt.xlabel(\"DOF number\")\n",
-    "plt.ylabel(\"Error L2 norm\")\n",
+    "plt.ylabel(\"Error H1 seminorm\")\n",
     "plt.grid(ls=\"--\")\n",
     "plt.legend()\n",
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d917c1d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
