--- a/jupyter/skel/ukacm_autumn_school/mixed_thermo_elastic/thermo_elastic.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/mixed_thermo_elastic/thermo_elastic.ipynb
@@ -21,7 +21,7 @@
     "\\boldsymbol{\\sigma}=\\mathbf{D}:\\left[\\boldsymbol{\\epsilon}-\\alpha(T-T_0)\\mathbf{I}\\right],\n",
     "\\end{align}\n",
     "\n",
-    "where $\\boldsymbol{\\sigma}$ is the actual stress, $\\boldsymbol{\\epsilon}$ is the actual strain, $\\mathbf{D}$ is the elasticity tensor, $T-T_0$ is the temperature change and $\\alpha$ is the thermal expansion coefficient. However, in the one-way coupling, temperature does not depend on the actual strain. Therefore, this case is also known as *linear thermoelasticity*.\n",
+    "where $\\boldsymbol{\\sigma}$ is the actual stress, $\\boldsymbol{\\epsilon}$ is the actual strain, $\\mathbf{D}$ is the elasticity tensor, $T-T_0$ is the temperature change and $\\alpha$ is the thermal expansion coefficient. However, in the one-way coupling, temperature does not depend on the actual strain. Therefore, this case is also known as *linear thermoelasticity*, see [[Hetnarski et al., 2009]](#hetnarski_2009) for more details.\n",
     "\n",
     "- Two-way coupling: not only the actual stress depends on the thermal strain, but also temperature depends on the actual strain (e.g. due to the change of density). This case is more complex and will not be considered in this tutorial."
    ]
@@ -103,24 +103,35 @@
     "\\begin{align}\n",
     "\\int_\\Omega \\boldsymbol{\\sigma}:\\nabla \\delta \\mathbf{u} \\,\\textrm{d}\\Omega - \\int_{\\Gamma_t} \\bar{\\mathbf{t}} \\cdot\\delta\\mathbf{u}\\,\\textrm{d}\\Gamma &= 0 \\quad\\forall \\delta \\mathbf{u}\\in \\mathbf{H}^1_0(\\Omega)\\\\\n",
     "\\int_\\Omega \\nabla\\cdot\\mathbf{q} \\;\\delta T \\,\\textrm{d}\\Omega + \\int_\\Omega c\\dot{T} \\delta T \\,\\textrm{d}\\Omega &= 0\\quad\\forall\\, \\delta T \\in L^2(\\Omega)\\\\\n",
-    "\\int_\\Omega \\frac{1}{k} \\mathbf{q} \\cdot \\delta \\mathbf{q} \\,\\textrm{d}\\Omega + \\int_{\\Gamma_T} \\bar{T}\\,\\delta \\mathbf{q}\\cdot{n} \\,\\textrm{d}\\Gamma - \\int_\\Omega T \\,\\nabla \\cdot\\delta\\mathbf{q} \\,\\textrm{d}\\Omega &= 0\\quad\\forall\\, \\delta \\mathbf{q} \\in H(\\textrm{div}, \\Omega),\n",
+    "\\int_\\Omega\\mathbf{q} \\cdot \\delta \\mathbf{q} \\,\\textrm{d}\\Omega + \\int_{\\Gamma_T} k\\bar{T}\\,\\delta \\mathbf{q}\\cdot{n} \\,\\textrm{d}\\Gamma - \\int_\\Omega k T \\,\\nabla \\cdot\\delta\\mathbf{q} \\,\\textrm{d}\\Omega &= 0\\quad\\forall\\, \\delta \\mathbf{q} \\in H(\\textrm{div}, \\Omega),\n",
     "\\end{align}\n",
     "\n",
     "and the following essential boundary conditions hold:\n",
     "\\begin{align}\n",
     "\\begin{cases}\n",
     "u = \\bar{u} &\\textrm{on}\\; \\Gamma_u \\\\\n",
-    "\\mathbf{q}\\cdot \\mathbf{n} = \\bar{q} &\\textrm{on}\\; \\Gamma_q \\\\\n",
+    "\\mathbf{q}\\cdot \\mathbf{n} = \\bar{q} &\\textrm{on}\\; \\Gamma_q, \\\\\n",
     "\\end{cases}\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "see [[Boffi, 2013]](#boffi_2013) for more details."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b3df251",
+   "id": "76b061d9",
    "metadata": {},
    "source": [
-    "### References: "
+    "### References: \n",
+    "\n",
+    "<a id='hetnarski_2009'></a> \n",
+    "**[Hetnarski et al., 2009]**  Hetnarski, R.B., Eslami, M.R. and Gladwell, G.M.L., Thermal stresses: advanced theory and applications, Springer, 2009\n",
+    "\n",
+    "<a id='boffi_2013'></a> \n",
+    "**[Boffi et al., 2013]** Boffi D., Brezzi F., Fortin M. Mixed finite element methods and applications, Springer, 2013\n",
+    "\n",
+    "<a id='wakeni_2022'></a> \n",
+    "**[Wakeni et al., 2022]**\n",
+    "Wakeni M et al., International Journal for Numerical Methods in Engineering, 123(14), 2022"
    ]
   },
   {
@@ -136,7 +147,7 @@
    "id": "6fc9150d",
    "metadata": {},
    "source": [
-    "The purpose of this tutorial is to demonstrate the advantages of the mixed formulation in the case when the solution of the problem has low regularity, e.g. when it has kinks. To consider such case we will solve the problem shown in [Fig. 2](#fig_2): a square plate having a circular hole in the middle, and consisting from two materials, which have different Young's moduli and very distinct heat conductivity coefficients. Initially the whole plate is at 0 degrees, however, the edges of hole are immediately heated to 1000 degrees. We will simulate the heat transfer and associated elastic deformation during the first 50s. Due to the symmetry of the problem setup, only one quarter of the geometry is considered."
+    "The purpose of this tutorial is to demonstrate the advantages of the mixed formulation in the case when the solution of the problem has low regularity, e.g. when it has kinks, see [[Wakeni et al., 2022]](#wakeni_2022) for more details. To consider such case we will solve the problem shown in [Fig. 2](#fig_2): a square plate having a circular hole in the middle, and consisting from two materials, which have different Young's moduli and very distinct heat conductivity coefficients. Initially the whole plate is at 0 degrees, however, the edges of hole are immediately heated to 1000 degrees. We will simulate the heat transfer and associated elastic deformation during the first 50 s. Due to the symmetry of the problem setup, only one quarter of the geometry is considered."
    ]
   },
   {
@@ -158,7 +169,9 @@
   {
    "cell_type": "markdown",
    "id": "aa0c4991",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Importing necessary modules, setting parameters and paths"
    ]
@@ -167,7 +180,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e375939f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -209,7 +224,9 @@
   {
    "cell_type": "markdown",
    "id": "e4ef7ebc",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Define utility functions (mesh generation, running the analysis, results post-processing)"
    ]
@@ -221,7 +238,8 @@
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -231,7 +249,7 @@
     "            return self[attr]\n",
     "        raise AttributeError(f\"'AttrDict' object has no attribute '{attr}'\")\n",
     "\n",
-    "def generate_mesh(params):\n",
+    "def generate_mesh(params):    \n",
     "    gmsh.initialize()\n",
     "    \n",
     "    gmsh.option.setNumber(\"General.Verbosity\", 3)\n",
@@ -363,7 +381,7 @@
     "    \n",
     "    return\n",
     "        \n",
-    "def run_mofem_thermo_elastic(params):\n",
+    "def run_mofem_thermo_elastic(params):    \n",
     "    params.part_file = params.mesh_file + \"_\" + str(params.nproc) + \"p.h5m\"\n",
     "    \n",
     "    if params.method == \"standard\":\n",
@@ -478,24 +496,24 @@
     "\n",
     "# Pre-processing parameters\n",
     "params.mesh_file = \"plate_with_hole\" # no file extension needed\n",
-    "params.side_length = 0.5\n",
-    "params.hole_radius = 0.2\n",
-    "params.interface_radius = 0.3\n",
+    "params.side_length = 0.5 # side length of the domain\n",
+    "params.hole_radius = 0.2 # radius of the hole in ther plate\n",
+    "params.interface_radius = 0.3 # radius of the interface between the sub-domains \n",
     "params.element_size = 0.05 # element size in the mesh\n",
-    "params.triangle_mesh = True\n",
-    "params.show_mesh = True\n",
+    "params.triangle_mesh = True # set True to use triangle mesh, and False for quad mesh\n",
+    "params.show_mesh = True # set True to show the generated mesh\n",
     "\n",
     "# Solution parameters\n",
-    "params.executable = \"mixed_poisson\"\n",
+    "params.method = \"mixed\" # or \"standard\"\n",
     "params.log_file = \"log\" # log file name\n",
-    "params.convert = True\n",
-    "params.nproc = 4\n",
-    "params.order = 1\n",
+    "params.convert = True # set True to convert results for-postprocessing\n",
+    "params.nproc = 4 # number of cores/processors to use\n",
+    "params.order = 1 # approximation order p of the field T (fields q and u in the mixed formulation have order p+1)\n",
     "params.verbosity_level = \"inform\" # you can try \"verbose\" if needed\n",
-    "params.field_eval_coords = (0.23, 0.23, 0)\n",
     "\n",
     "# Post-processing parameters\n",
-    "params.show_edges = True\n",
+    "params.field_eval_coords = (0.23, 0.23, 0) # point to evaluate the solution (for convergence test)\n",
+    "params.show_edges = True \n",
     "params.component = None"
    ]
   },
@@ -578,7 +596,7 @@
    "id": "8ea2fc00",
    "metadata": {},
    "source": [
-    "### Visualise the results"
+    "### Visualise and compare the results"
    ]
   },
   {
@@ -596,7 +614,7 @@
     "#try \"T\", \"FLUX\", \"U\", \"STRAIN\", \"STRESS\"\n",
     "params.component = 0\n",
     "# try 0,1,2 for vectors and 0-8 for tensors\n",
-    "params.warp_factor = 1e2 \n",
+    "params.warp_factor = 1e2\n",
     "# try increasing/decreasing the warp factor\n",
     "params.show_edges = False\n",
     "\n",
@@ -760,14 +778,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40781a17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
