--- a/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
@@ -437,7 +437,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-19T20:13:41.216799Z",
+     "start_time": "2023-12-19T20:13:32.646830Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -487,11 +492,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0,
-     6,
-     21
-    ]
+    "ExecuteTime": {
+     "end_time": "2023-12-19T20:13:41.417441Z",
+     "start_time": "2023-12-19T20:13:41.219821Z"
+    },
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -720,6 +725,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-19T20:13:41.527484Z",
+     "start_time": "2023-12-19T20:13:41.418711Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -766,6 +775,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-19T20:14:52.318276Z",
+     "start_time": "2023-12-19T20:13:41.529005Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -783,7 +796,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-19T20:14:53.420127Z",
+     "start_time": "2023-12-19T20:14:52.320609Z"
+    }
+   },
    "outputs": [],
    "source": [
     "params.show_field = \"PLASTIC_STRAIN\" # PLASTIC_STRAIN, PLASTIC_MULTIPLIER, FIRST_PIOLA, GRAD, U\n",
@@ -800,6 +818,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-19T20:14:55.269052Z",
+     "start_time": "2023-12-19T20:14:53.422124Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 621
