--- a/jupyter/skel/ukacm_autumn_school/mixed_thermo_elastic/thermo_elastic.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/mixed_thermo_elastic/thermo_elastic.ipynb
@@ -169,9 +169,7 @@
   {
    "cell_type": "markdown",
    "id": "aa0c4991",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Importing necessary modules, setting parameters and paths"
    ]
@@ -180,9 +178,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e375939f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -224,9 +220,7 @@
   {
    "cell_type": "markdown",
    "id": "e4ef7ebc",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Define utility functions (mesh generation, running the analysis, results post-processing)"
    ]
@@ -236,10 +230,7 @@
    "execution_count": null,
    "id": "c3917ad1",
    "metadata": {
-    "code_folding": [
-     0
-    ],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
