--- a/tutorials/doc/tutorials.dox
+++ b/tutorials/doc/tutorials.dox
@@ -261,6 +261,12 @@ continuing with the one you are most excited about.
        </td>
   </tr>
 
+  <tr valign="top">
+       <td width="350px">\ref tutorial_adolc_plasticity</td>
+       <td> Automatic differentiation for elato-plasticity
+       <br/> *Keywords:* ADOL-C, plasticity, nonlinear problem, dg projection, user module
+       </td>
+  </tr>
 
 </table>
 
