--- a/mofem/doc/faq.dox
+++ b/mofem/doc/faq.dox
@@ -11,7 +11,7 @@ cite our publication in \em The \em Journal \em of \em Open \em Source \em Softw
 \htmlonly
 <a href="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215"><img src="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215/status.svg"></a>
 \endhtmlonly
-(follow link on the badge).
+(follow the link on the badge).
 
 The BibTex entry for MoFEM paper \cite mofemJoss is 
 \code
@@ -30,8 +30,8 @@ The BibTex entry for MoFEM paper \cite mofemJoss is
 }
 \endcode
 
-\note Each user module can have own DOI and reference. All module references
-supplements  MoFEM reference. For example homogenisation module DOI is on the badge
+\note Each user module can have its own DOI and reference. All module references
+supplement MoFEM references. For example, the homogenization module DOI is on the badge
 \htmlonly
 <a href="https://doi.org/10.5281/zenodo.439368"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.439368.svg" alt="DOI"></a>
 \endhtmlonly
@@ -42,11 +42,11 @@ supplements  MoFEM reference. For example homogenisation module DOI is on the ba
 \subsection policy_of_for_version How MoFEM version is changed?
 
 The current MoFEM version can be identified by \e Semantic \e Versioning and \e
-Git \e Commit \e Id. \e Git \e Commit \e Id is unique and points to particular
-code commit. \e Semantic \e Versioning is not unique, more than one commits to git
+Git \e Commit \e Id. \e Git \e Commit \e Id is unique and points to a particular
+code commit. \e Semantic \e Versioning is not unique, more than one commit to the git
 repository can have the same version.
 
-First two lines of every executed code which is build with MoFEM library look like that
+The first two lines of every executed code which is built with MoFEM library look like that
 \code
 version 0.3.24  <---  (MAJOR_VERSION.MINOR_VERSION.BUILD_VERSION)
 git commit id 3d06924d27973df16e3260c6e962929330cf9348
