--- a/mofem/doc/about_us.dox
+++ b/mofem/doc/about_us.dox
@@ -6,7 +6,9 @@
 
 - \ref mofem_citation
 \htmlonly
-<a href="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215"><img src="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215/status.svg"></a>
+<a href="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215">
+<img src="https://joss.theoj.org/papers/10.21105/joss.01441/status.svg" alt="DOI">
+</a>
 \endhtmlonly
 - Google groups Q&A forum: <a href="https://groups.google.com/forum/#!forum/mofem-group">mofem-group@googlegroups.com</a>
 - Version repository: <https://bitbucket.org/likask/mofem-cephas>
