--- a/mofem/doc/faq.dox
+++ b/mofem/doc/faq.dox
@@ -9,7 +9,9 @@
 If you write a paper using results obtained with the help of MoFEM, please
 cite our publication in \em The \em Journal \em of \em Open \em Source \em Software
 \htmlonly
-<a href="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215"><img src="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215/status.svg"></a>
+<a href="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215">
+<img src="https://joss.theoj.org/papers/10.21105/joss.01441/status.svg" alt="DOI">
+</a>
 \endhtmlonly
 (follow the link on the badge).
 
